C2 doesn't always run loop opts for compilations that include loops

XMLWordPrintable

    • b20

        I noticed that c2 wouldn't always run loop opts when the compilation include loops. Compile::has_loops() is what controls whether loop opts are executed. It's initially false and then set to true as parsing finds new loops. Parsing doesn't seem to always update the flag when it should.

              Assignee:
              Roland Westrelin
              Reporter:
              Roland Westrelin
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: