8253923: C2 doesn't always run loop opts for compilations that include loops

Reviewed-by: neliasso, thartmann